--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4,8 +4,8 @@
 @source "../../../content/**/*";
 
 @theme static {
-  --font-sans: 'Public Sans', sans-serif;
-  --font-serif: 'Instrument Serif', serif;
+  --font-sans: 'Inter Tight', sans-serif;
+  --font-serif: 'Inter Tight', sans-serif;
 }
 
 :root {
